# Quest-of-Magic-Crossplatform

./: Cargo.toml  Overworld.tmx  Tiles.tsx  readme.md
src/: main.rs  qom.rs
src/qom/: mod.rs  player_data.rs  qom_data.rs  qom_map.rs  screens.rs  tiled.rs  transitions.rs  utility.rs
src/qom/qom_map/: mod.rs  qom_layer.rs  qom_object.rs  qom_object_manager.rs
src/qom/qom_map/qom_object/: mod.rs  player.rs  qom_entrance_object.rs  qom_house_object.rs  qom_npc_object.rs  qom_object_manager.rs  qom_player_object.rs  qom_sign_object.rs  qom_unknown_object.rs
src/qom/screens/: loading_screen.rs  world_screen.rs
src/qom/tiled/: mod.rs
static/: Characters.tsx  Overworld.tmx
