[package]
name = "quicksilver_test"
version = "0.1.0"
authors = ["mfrench <mfrench@indeed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "*"
base64  = "0.10"
xml-rs  = "0.8"
libflate = "0.1.18"
stdweb = "0.4.20"
nalgebra = "0.18"

[profile.dev]
opt-level = 2